<resources>
    <string name="app_name">TheMovieDB</string>
    <string name="movies">Movies</string>
    <string name="error">Error</string>
    <string name="no_internet_messege">Unable to connect to the internet. Please check your internet connection and try again!</string>
    <string name="response_error_messege">Unable to fetch the data! Please try again later</string>
    <string name="server_error_messege">Unable to connect to the servers! Please try again later</string>
    <string name="movie_details">Movie Details</string>
    <string name="filter">Filter</string>
    <string name="genres">Genres:</string>
    <string name="home_page">Home Page:</string>
    <string name="status">Status:</string>
    <string name="budget">Budget:</string>
    <string name="popularity">Popularity:</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview:</string>
    <string name="min_year">Min Year</string>
    <string name="max_year">Max Year</string>
    <string name="apply">APPLY</string>
    <string name="the_movie_db_logo">The Movie DB Logo</string>
    <string name="movies_still_loading_error">Movies are still loading!</string>
</resources>
